--- a/src/main/resources/org/jenkinsci/plugins/matrixauth/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/matrixauth/Messages.properties
@@ -22,3 +22,4 @@
 
 GlobalMatrixAuthorizationStrategy.DisplayName=Matrix-based security
 ProjectMatrixAuthorizationStrategy.DisplayName=Project-based Matrix Authorization Strategy
+GlobalMatrixAuthorizationStrategy.ReplacePermission=Matrix-based security
